# markdown_transcription_system

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  install_test.sh  install_test_dependencies.sh  pyproject.toml  requirements.txt  test_system.sh
.github/workflows/: build.yml  test.yml
docs/: CONTRIBUTING.md  SECURITY.md  TESTING.md  TROUBLESHOOTING.md
examples/: obsidian-config.yaml
examples/config-examples/: foam-config.yaml  generic-config.yaml  logseq-config.yaml
scripts/: install.sh  setup-systemd.sh
src/: __init__.py  config.py  transcription_system.py
templates/: link-template.md  transcript-template.md
