[project]
name = "markdown-transcription-system"
version = "1.0.0"
description = "Universal Markdown Audio Transcription System - privacy-first local transcription tool"
authors = [{name = "tehwolf"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "PyYAML>=6.0",
    "ffmpeg-python>=0.2.0",
]

[project.scripts]
markdown-transcription = "src.transcription_system:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
